feat: detect commercials in recordings (#883)
